# Burglar

./: .gitignore  LICENSE.md  LICENSE.txt  NOTICE  README.md  burglar.py  engine.py  game.py  menus.py  pyproject.toml  requirements.txt  test_stress_engine.py  tools.py  utils.py
burglar/: burglar.py  burglar.py~  engine.py  menus.py
src/burglar/: burglar.py  config.py  engine.py  game.py  run.py  utils.py
tests/: test_basic.py
