[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burglar"
dynamic = ["version"]
description = 'A match-3 game.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AlexHorta", email = "buey.horta@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/AlexHorta/burglar#readme"
Issues = "https://github.com/AlexHorta/burglar/issues"
Source = "https://github.com/AlexHorta/burglar"

[tool.hatch.version]
path = "src/burglar/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/burglar tests}"

[tool.coverage.run]
source_pkgs = ["burglar", "tests"]
branch = true
parallel = true
omit = [
  "src/burglar/__about__.py",
]

[tool.coverage.paths]
burglar = ["src/burglar", "*/burglar/src/burglar"]
tests = ["tests", "*/burglar/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
